--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Library</title>
     <link rel="stylesheet" href="./style.css" />
-    <script src="javascript.js" defer></script>
+    <script src="./library.js" defer></script>
   </head>
 
   <body></body>
