Allow users to add to their library with a button

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 
   <body>
     <div class="books-container"></div>
+
+    <button type="button" class="new-book-button">NEW BOOK</button>
   </body>
 </html>
